[package]
name = "zed"
version = "0.1.0"
authors = ["M Farkas-Dyck <strake888@gmail.com>"]

[dependencies]
containers = { version = "0.7", default-features = false, features = ["default_allocator"] }
curse = "0.1"
cursebox = "0.1"
i-o = "0.2"
loca = "0.5"
libc = { version = "0.2", default-features = false }
null-terminated = "0.2.6"
unix = "0.2.1"

[replace]
"containers:0.7.1" = { path = "../containers.rs", default-features = false, features = ["default_allocator"] }
