[package]
name = "zed"
version = "0.1.0"
authors = ["M Farkas-Dyck <strake888@gmail.com>"]

[dependencies]
containers = { version = "0.9.0", default-features = false, features = ["default_allocator"] }
cursebox = "0.2.4"
default_allocator = "0.3"
fmt = "0.1"
i-o = "0.4"
loca = "0.7"
libc = { version = "0.2", default-features = false }
null-terminated = "0.3"
syscall = "0.2"
unix = "0.6.0"
utf = "0.1.1"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = "s"
panic = "abort"
lto = true

[patch.crates-io]
"default_allocator" = { git = "https://github.com/strake/default_allocator.rs", rev = "8fe1debed8c81656d3a9e449385c24d5545fd53c" }
